<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pillbox.activity.MedInfoActivity"
    android:id="@+id/coordinatorLayout"
    android:background="@drawable/bg_view_pill">

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="20dp"
        android:background="@color/danger"
        android:text="Delete"
        android:textColor="@color/white"
        android:onClick="delete_btn"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/med_name_label"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/med_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/med_name" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/dosage_label"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/dosage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/med_name"
                android:hint="@string/dosage"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/amount_label"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/before_food"
                android:hint="@string/amount"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/frequency_label"
                android:textSize="16sp" />

            <com.example.pillbox.MultiSelectionSpinner
                android:id="@+id/frequency_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </com.example.pillbox.MultiSelectionSpinner>
            <!--<Spinner-->
            <!--android:id="@+id/frequency_spinner"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:spinnerMode="dialog" />-->
        </LinearLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/units_label"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/units_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/before_food_label"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/before_food_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/start_date_label"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/end_date_label"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>



    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
