<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_add_med"
    tools:context="com.example.pillbox.activity.AddMedActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/med_name_label"
                android:textSize="12sp"
                android:padding="0dp"
                android:textColor = "@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/med_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/med_name"
                android:paddingTop="0dp"/>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dosage_label"
                android:textSize="12sp"
                android:padding="0dp"
                android:textColor = "@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/dosage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/med_name"
                android:hint="@string/dosage"
                android:inputType="number"
                android:paddingTop="0dp"/>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_label"
                android:textSize="12sp"
                android:padding="0dp"
                android:textColor = "@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/before_food"
                android:hint="@string/amount"
                android:inputType="number"
                android:paddingTop="0dp"/>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frequency_label"
                android:textSize="12sp"
                android:padding="0dp"
                android:textColor = "@color/colorPrimaryDark"/>

            <com.example.pillbox.MultiSelectionSpinner
                android:id="@+id/frequency_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp">


            </com.example.pillbox.MultiSelectionSpinner>
            <!--<Spinner-->
                <!--android:id="@+id/frequency_spinner"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:spinnerMode="dialog" />-->
        </LinearLayout>

        <LinearLayout
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/units_label"
                android:textSize="12sp"
                android:padding="0dp"
                android:textColor = "@color/colorPrimaryDark"/>

            <Spinner
                android:id="@+id/units_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:padding="0dp"/>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/before_food_label"
                android:textSize="12sp"
                android:padding="0dp"
                android:textColor = "@color/colorPrimaryDark"/>

            <Spinner
                android:id="@+id/before_food_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:padding = "0dp"/>
        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
